# vandyhacks

./: .gitignore  dev.db  dev.db-journal  flake.nix  generate_report.py  package.json  pnpm-lock.yaml  process_response.py  tailwind.config.js  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  stats.tsx
app/api/MidnightCreate/: route.ts
app/api/auth/[auth0]/: route.ts
app/api/callNeeded/: route.ts
app/api/careTaker/: route.ts
app/api/midnightCreate/: route.ts
app/api/missedCall/: route.ts
app/api/registration/: route.ts
app/api/retrieve/: route.ts
app/api/successfulCall/: route.ts
backend/: ai.py  api.py  app.py  call.py  flake.nix  logfile.txt  pyproject.toml  speech_recognizer.py
components/: chat.tsx  stats.tsx  survey.tsx
components/ui/: survey.tsx
prisma/: design.md  medium.prisma  old.prisma  schema.prisma
prisma/migrations/20231028201846_init/: migration.sql
prisma/migrations/20231028203339_session/: migration.sql
prisma/migrations/20231028210631_auth/: migration.sql
prisma/migrations/20231028211243_messages/: migration.sql
prisma/migrations/20231029000702_session_id_removed/: migration.sql
prisma/migrations/20231029001717_care_taker_updates/: migration.sql
prisma/migrations/20231029031148_email_care_taker/: migration.sql
prisma/migrations/20231029032848_email_care_taker2/: migration.sql
prisma/migrations/20231029122839_changes/: migration.sql
